--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
 --tw-color-primary-50: 243 246 252;
 --tw-color-primary-100: 229 237 249;
@@ -26,6 +22,31 @@
 --color-primary-800: rgb(var(--tw-color-primary-800)); /* #1d416f */
 --color-primary-900: rgb(var(--tw-color-primary-900)); /* #1d385d */
 --color-primary-950: rgb(var(--tw-color-primary-950)); /* #14253d */
+}
+
+:root[class~="dark"] {
+  --tw-color-primary-50: 254 252 232;
+  --tw-color-primary-100: 254 249 195;
+  --tw-color-primary-200: 254 240 138;
+  --tw-color-primary-300: 253 224 71;
+  --tw-color-primary-400: 250 204 21;
+  --tw-color-primary-500: 234 179 8;
+  --tw-color-primary-600: 202 138 4;
+  --tw-color-primary-700: 161 98 7;
+  --tw-color-primary-800: 133 77 14;
+  --tw-color-primary-900: 113 63 18;
+  --tw-color-primary-950: 66 32 6;
+  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #fefce8 */
+  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #fef9c3 */
+  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #fef08a */
+  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #fde047 */
+  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #facc15 */
+  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #eab308 */
+  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #ca8a04 */
+  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #a16207 */
+  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #854d0e */
+  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #713f12 */
+  --color-primary-950: rgb(var(--tw-color-primary-950)); /* #422006 */
 }
 
 *, *::before, *::after {
@@ -56,89 +77,4 @@ p, h1, h2, h3, h4, h5, h6 {
 
 #root, #__next {
   isolation: isolate;
-}
-
-@layer base {
-  /* inter var - latin */
-  @font-face {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 100 900;
-    font-display: optional;
-    src: url('/fonts/inter-latin.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
-  }
-
-  html {
-    scroll-behavior: smooth;
-    scroll-padding-top: 80px;
-  }
-
-  /**=========== Typography =========== */
-  .h0 {
-    @apply font-primary text-3xl font-bold md:text-5xl;
-  }
-
-  h1,
-  .h1 {
-    @apply font-primary text-2xl font-bold md:text-4xl;
-  }
-
-  h2,
-  .h2 {
-    @apply font-primary text-xl font-bold md:text-3xl;
-  }
-
-  h3,
-  .h3 {
-    @apply font-primary text-lg font-bold md:text-2xl;
-  }
-
-  h4,
-  .h4 {
-    @apply font-primary text-base font-bold md:text-lg;
-  }
-
-  body,
-  .p {
-    @apply font-primary text-sm md:text-base;
-  }
-  /**======== Typography =========== */
-
-  .layout {
-    /* 1280px */
-    max-width: 80rem;
-    @apply mx-auto w-11/12;
-  }
-
-  .newtab {
-    cursor: url('/images/icon/arrow-up-right.svg'), auto;
-  }
-}
-
-@layer utilities {
-  .animated-underline {
-    background-image: linear-gradient(#33333300, #33333300),
-      linear-gradient(
-        to right,
-        var(--color-primary-400),
-        var(--color-primary-500)
-      );
-    background-size: 100% 1px, 0 1px;
-    background-position: 100% 100%, 0 100%;
-    background-repeat: no-repeat;
-  }
-  @media (prefers-reduced-motion: no-preference) {
-    .animated-underline {
-      transition: 0.3s ease;
-      transition-property: background-size, color, background-color,
-        border-color;
-    }
-  }
-  .animated-underline:hover,
-  .animated-underline:focus-visible {
-    background-size: 0 1px, 100% 1px;
-  }
 }
