--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,11 +3,11 @@
 @layer base {
   /* inter var - latin */
   @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: normal;
     font-weight: 100 900;
     font-display: optional;
-    src: url('/fonts/inter-latin.woff2') format('woff2');
+    src: url("/fonts/inter-latin.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
       U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
       U+2215, U+FEFF, U+FFFD;
@@ -64,7 +64,55 @@
   }
 
   .newtab {
-    cursor: url('/images/icon/arrow-up-right.svg') 10 10, pointer;
+    cursor:
+      url("/images/icon/arrow-up-right.svg") 10 10,
+      pointer;
   }
 
+  .bg-pattern {
+    background: radial-gradient(
+        circle at top left,
+        transparent 9%,
+        #f3f3f3 10%,
+        #f3f3f3 15%,
+        transparent 16%
+      ),
+      radial-gradient(
+        circle at bottom left,
+        transparent 9%,
+        #f3f3f3 10%,
+        #f3f3f3 15%,
+        transparent 16%
+      ),
+      radial-gradient(
+        circle at top right,
+        transparent 9%,
+        #f3f3f3 10%,
+        #f3f3f3 15%,
+        transparent 16%
+      ),
+      radial-gradient(
+        circle at bottom right,
+        transparent 9%,
+        #f3f3f3 10%,
+        #f3f3f3 15%,
+        transparent 16%
+      ),
+      radial-gradient(circle, transparent 25%, #ffffff 26%),
+      linear-gradient(
+        45deg,
+        transparent 46%,
+        #f3f3f3 47%,
+        #f3f3f3 52%,
+        transparent 53%
+      ),
+      linear-gradient(
+        135deg,
+        transparent 46%,
+        #f3f3f3 47%,
+        #f3f3f3 52%,
+        transparent 53%
+      );
+    background-size: 2em 2em;
+  }
 }
