--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -8,8 +8,12 @@
         var(--color-primary-500),
         var(--color-primary-100)
       );
-    background-size: 100% 1px, 0 1px;
-    background-position: 100% 100%, 0 100%;
+    background-size:
+      100% 1px,
+      0 1px;
+    background-position:
+      100% 100%,
+      0 100%;
     background-repeat: no-repeat;
   }
   @media (prefers-reduced-motion: no-preference) {
@@ -21,6 +25,39 @@
   }
   .animated-underline:hover,
   .animated-underline:focus-visible {
-    background-size: 0 1px, 100% 1px;
+    background-size:
+      0 1px,
+      100% 1px;
+  }
+
+  [data-fade] {
+    @apply translate-y-10 opacity-0 transition duration-300 ease-out motion-reduce:translate-y-0 motion-reduce:opacity-100;
+  }
+  .fade-in-start [data-fade] {
+    @apply translate-y-0 opacity-100;
+  }
+  .fade-in-start [data-fade="1"] {
+    transition-delay: 100ms;
+  }
+  .fade-in-start [data-fade="2"] {
+    transition-delay: 200ms;
+  }
+  .fade-in-start [data-fade="3"] {
+    transition-delay: 300ms;
+  }
+  .fade-in-start [data-fade="4"] {
+    transition-delay: 400ms;
+  }
+  .fade-in-start [data-fade="5"] {
+    transition-delay: 500ms;
+  }
+  .fade-in-start [data-fade="6"] {
+    transition-delay: 600ms;
+  }
+  .fade-in-start [data-fade="7"] {
+    transition-delay: 700ms;
+  }
+  .fade-in-start [data-fade="8"] {
+    transition-delay: 800ms;
   }
 }
