--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,9 +8,10 @@
     font-weight: 100 900;
     font-display: optional;
     src: url('/fonts/inter-latin.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
-      U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
-      U+2212, U+2215, U+FEFF, U+FFFD;
+    unicode-range:
+      U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+      U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+      U+FEFF, U+FFFD;
   }
 
   html {
@@ -85,7 +86,8 @@
     inset: 0;
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(to right, #80808012 1px, transparent 1px),
+    background-image:
+      linear-gradient(to right, #80808012 1px, transparent 1px),
       linear-gradient(to bottom, #80808012 1px, transparent 1px);
     background-size: 24px 24px;
   }
@@ -97,7 +99,8 @@
   }
 
   .bg-pattern {
-    background: radial-gradient(
+    background:
+      radial-gradient(
         circle at top left,
         transparent 9%,
         #f3f3f3 10%,
