--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -2,7 +2,8 @@
 
 @layer utilities {
   .animated-underline {
-    background-image: linear-gradient(#33333300, #33333300),
+    background-image:
+      linear-gradient(#33333300, #33333300),
       linear-gradient(
         to right,
         var(--color-primary-500),
@@ -19,8 +20,8 @@
   @media (prefers-reduced-motion: no-preference) {
     .animated-underline {
       transition: 0.3s ease;
-      transition-property: background-size, color, background-color,
-        border-color;
+      transition-property:
+        background-size, color, background-color, border-color;
     }
   }
   .animated-underline:hover,
