--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -34,31 +34,40 @@
   [data-fade] {
     @apply translate-y-10 opacity-0 transition duration-300 ease-out motion-reduce:translate-y-0 motion-reduce:opacity-100;
   }
-  .fade-in-start [data-fade] {
+  .fade-in-start [data-fade],
+  [data-fade-in='true'] [data-fade] {
     @apply translate-y-0 opacity-100;
   }
-  .fade-in-start [data-fade='1'] {
+  .fade-in-start [data-fade='1'],
+  [data-fade-in='true'] [data-fade='1'] {
     transition-delay: 100ms;
   }
-  .fade-in-start [data-fade='2'] {
+  .fade-in-start [data-fade='2'],
+  [data-fade-in='true'] [data-fade='2'] {
     transition-delay: 200ms;
   }
-  .fade-in-start [data-fade='3'] {
+  .fade-in-start [data-fade='3'],
+  [data-fade-in='true'] [data-fade='3'] {
     transition-delay: 300ms;
   }
-  .fade-in-start [data-fade='4'] {
+  .fade-in-start [data-fade='4'],
+  [data-fade-in='true'] [data-fade='4'] {
     transition-delay: 400ms;
   }
-  .fade-in-start [data-fade='5'] {
+  .fade-in-start [data-fade='5'],
+  [data-fade-in='true'] [data-fade='5'] {
     transition-delay: 500ms;
   }
-  .fade-in-start [data-fade='6'] {
+  .fade-in-start [data-fade='6'],
+  [data-fade-in='true'] [data-fade='6'] {
     transition-delay: 600ms;
   }
-  .fade-in-start [data-fade='7'] {
+  .fade-in-start [data-fade='7'],
+  [data-fade-in='true'] [data-fade='7'] {
     transition-delay: 700ms;
   }
-  .fade-in-start [data-fade='8'] {
+  .fade-in-start [data-fade='8'],
+  [data-fade-in='true'] [data-fade='8'] {
     transition-delay: 800ms;
   }
 }
